Fix left align with callout txt

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -435,6 +435,6 @@ font-weight:700;
 
 .callout p {
 margin-bottom:4px;
-margin-left:125px;
-width: 85%;
+margin-left:365px;
+width: 60%;
 }
